--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -68,7 +68,7 @@ html, body{
 	#burst-header {
 		display: flex;
 		justify-content: space-between;
-		height: 80px;
+		height: 70px;
     	box-sizing: border-box;
 
 		background-color: #fff;
@@ -77,7 +77,7 @@ html, body{
 			margin: auto @default-margin;
 			padding: @default-padding;
 			padding-right: 0;
-			width: 85px;
+			width: 75px;
 		}
 		.burst-header-left {
 			display: flex;
@@ -85,8 +85,8 @@ html, body{
 			.burst-header-menu{
 				margin: auto 15px;
 				a {
-					font-size: 1.5rem;
-					padding: 28px 15px;
+					font-size: 1.4rem;
+					padding: 23px 15px;
 					text-decoration: none;
 					color: @grey-dark;
 					height: 100%;
@@ -136,9 +136,6 @@ html, body{
   		}
   		.burst-field{
   			margin-bottom: @default-margin;
-  			input[type="text"]{
-
-  			}
   		}
   		&.first .burst-label{
   			padding-top: 0;
@@ -612,12 +609,14 @@ html, body{
 			transform:translateY(-50%);
 
 			/* basic styles */
-			width:200px;
+			width: 40ch;
+			font-size: 1.2rem;
+			line-height: 1.8rem;
 			padding:10px;
 			border-radius:10px;
 			background: #252525;
 			color: #fff;
-			text-align:center;
+			text-align:left;
 
 			display: none;
 			//opacity:0;
