--- a/assets/css/input-fields.less
+++ b/assets/css/input-fields.less
@@ -4,7 +4,6 @@
       display: flex;
       align-items: center;
       .select2-container{
-        max-width: 300px;
         margin: 0 15px;
         .select2-selection--single, .select2-selection__rendered, .select2-selection__arrow {
           height: 33px;
@@ -24,8 +23,8 @@
     }
   }
 }
-.burst-copy-button{
-
+.select2-container {
+  max-width: 250px;
 }
 .select2-results__options li{
   font-size: 1.4rem !important;
