--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -21,9 +21,10 @@
 
 @border-radius: 3px;
 @border: 1px solid @border-color;
-@box-shadow:  0 1px 1px rgba(0,0,0,0.12),
-              0 2px 2px rgba(0,0,0,0.10),
-              0 4px 4px rgba(0,0,0,0.04);
+@box-shadow:  1px 1px 1px rgba(0,0,0,0.10),
+              2px 2px 2px rgba(0,0,0,0.05),
+              0 6px 6px rgba(0,0,0,0.02),
+              0 8px 8px rgba(0,0,0,0.02);
 
 
 // RSP Brand Colors
