--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,3 +1,36 @@
+html,
+body {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+#wpbody-content {
+  font-size: 1.4rem;
+  line-height: 1.6rem;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul,
+div,
+span {
+  margin: 0;
+  padding: 0;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
 .field-group.burst-select_control .burst-field,
 .field-group.burst-select_variant .burst-field {
   display: flex;
@@ -32,7 +65,6 @@
   background: #fff;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1), 2px 2px 2px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.02), 0 8px 8px rgba(0, 0, 0, 0.02);
   border-radius: 3px;
-  margin: 0;
 }
 .burst-date-container {
   background: #fff;
@@ -59,28 +91,30 @@ body {
 }
 #burst {
   font-size: 1.4rem;
+  line-height: 2.1rem;
+  color: #3c434a;
   padding-bottom: 20px;
   margin: 0 0 0 -20px;
   /* field styles */
   /*
-	Animated skeleton screen using CSS.
+    Animated skeleton screen using CSS.
 
-	Create shapes using gradients that simulate solids.
+    Create shapes using gradients that simulate solids.
 
-	Use `:empty` pseduo-class to show skeleton screen background only while container has no content (ex: for the "loading" state). When content is added to the container element, the pseudo-class selector won't match anymore and the skeleton screen will be removed automatically; no need to toggle a separate class on the container.
+    Use `:empty` pseduo-class to show skeleton screen background only while container has no content (ex: for the "loading" state). When content is added to the container element, the pseudo-class selector won't match anymore and the skeleton screen will be removed automatically; no need to toggle a separate class on the container.
 
-	See: https://developer.mozilla.org/en-US/docs/Web/CSS/:empty
+    See: https://developer.mozilla.org/en-US/docs/Web/CSS/:empty
 
-	Animating one layer of the background which is a tilted linear gradient with white in the middle to achieve shine effect.
-	*/
+    Animating one layer of the background which is a tilted linear gradient with white in the middle to achieve shine effect.
+    */
   /* Notices */
   /*
-    Tips and Tricks
+    Tips and Tricks and Upsell
    */
   /*Tooltips on dashboard/settings page*/
   /*
-	  Progress bar
-	 */
+      Progress bar
+     */
   /* Grid */
 }
 #burst h1,
@@ -91,6 +125,10 @@ body {
 #burst h6,
 #burst p {
   color: #3c434a;
+}
+#burst h3 {
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 #burst p {
   font-size: 1.4rem;
@@ -127,7 +165,7 @@ body {
   margin: auto 15px;
   padding: 20px;
   padding-right: 0;
-  width: 75px;
+  width: 90px;
 }
 #burst #burst-header .burst-header-left {
   display: flex;
@@ -167,15 +205,11 @@ body {
 #burst #burst-content-area {
   margin: 10px;
 }
-#burst h3 {
-  margin-top: 30px;
-  margin-bottom: 10px;
-}
 #burst .field-group .burst-label {
   vertical-align: top;
   text-align: left;
   margin: 10px 10px 10px 0;
-  line-height: 1.3;
+  line-height: 1.3rem;
   font-weight: 600;
   color: #23282d;
   text-shadow: none;
@@ -286,7 +320,6 @@ body {
   border: 1px solid #d6d8db;
   padding: 10px 15px;
   border-radius: 0px;
-  margin: 0px 0;
 }
 #burst .burst-panel .burst-panel-title {
   cursor: pointer;
@@ -498,7 +531,6 @@ body {
   background: #fff;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1), 2px 2px 2px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.02), 0 8px 8px rgba(0, 0, 0, 0.02);
   border-radius: 3px;
-  margin: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -580,9 +612,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-#burst .burst-checkbox .burst-field {
-  margin: 0;
 }
 /* tooltip styles */
 .burst-tooltip {
@@ -696,9 +725,6 @@ body {
     background-position: 0% 50%;
   }
 }
-.grey {
-  background-color: #c6c6c6;
-}
 .burst-experiment-dot:before {
   content: ' ';
   height: 17px;
@@ -728,35 +754,8 @@ body {
   background-color: #f4bf3e;
   content: 'B';
 }
-.burst-info-box {
-  padding: 10px;
-  border-radius: 5px;
-  background: #ededed;
-  font-size: 1.2rem;
-  font-style: italic;
-}
-.burst-accompanied-text {
-  color: #737373;
-  font-size: 1.2rem;
-}
-.burst-experiment-info-below-title {
-  padding: 10px 14px;
-  display: inline-flex;
-  align-items: center;
-  font-size: 1.4rem;
-  font-weight: 500;
-  margin: 4px 0;
-  padding: 5px 10px;
-  border-radius: 5px;
-  color: #333;
-}
-.burst-experiment-info-below-title.control {
-  background-color: #eaf8fe;
-  border: 1px solid #29b6f6;
-}
-.burst-experiment-info-below-title.variant {
-  background-color: #fefbf4;
-  border: 1px solid #f4bf3e;
+.grey {
+  background-color: #c6c6c6;
 }
 .burst-experiment-status {
   display: flex;
@@ -765,19 +764,12 @@ body {
   justify-content: flex-start;
   align-items: center;
 }
-.burst-experiment-status span {
-  margin: 0;
-  padding: 0;
-}
 .burst-experiment-status span.burst-bullet {
   transition: all 0.5s ease;
   margin-right: 5px;
 }
 .burst-experiment-status span.burst-bullet.loading {
   animation: grow-and-shrink 1s infinite;
-}
-.burst-grid .burst-experiment-completed p {
-  margin: 0;
 }
 @keyframes grow-and-shrink {
   0%,
@@ -787,11 +779,6 @@ body {
   50% {
     transform: scale(1);
   }
-}
-.toplevel_page_burst #wpbody-content,
-.burst-1_page_burst-experiments #wpbody-content,
-.burst-1_page_burst-settings #wpbody-content {
-  padding-bottom: 20px;
 }
 /*
     cool checkbox sliders
@@ -888,7 +875,6 @@ input:focus + .burst-slider {
 #burst .burst-experiment-version a,
 #burst .burst-experiment-version p {
   width: 100%;
-  margin: 0;
 }
 #burst .burst-experiment-version p {
   font-weight: 500;
